--- a/Index.html
+++ b/Index.html
@@ -11,7 +11,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
     
-     <link rel="icon" id="favicon" href="imagens/icons-page.png" type="image/x-icon">
+     <link rel="icon" id="favicon" href="imagens/icon_page.png" type="image/x-icon">
 
 
 
